Fix alignment of cards and flexbox

--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ p {
 /* Section about the projects */
 .project-container {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .project-card {
